--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 # Ignore The following directories / file extensions
-#Library
-#Temp
+Library
+Temp
 
 # Ignore the following file extensions
+*.exe
+*.vcproject
+*.sln
+*.exe
 *.swp
 *.DS_Store
 Thumbs.db
